--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -35,6 +35,15 @@ header{
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem 1.5rem;
+    transition: 200ms;
+}
+
+.me:hover{
+    transform: scale(105%);
+    transition: 200ms;
+    box-shadow:  2px 2px 4px 1px rgba(255, 255, 255, 0.14), 
+    0px 2px 4px 1px rgba(255, 255, 255, 0.12), 
+    0px 2px 2px -3px rgba(255, 255, 255, 0.2);
 }
 
 /*========Scroll down============*/
@@ -51,28 +60,20 @@ header{
 /*========Media queries Medium============*/
 @media screen and (max-width: 1024px){
     header{
-        height: 68vh;
+        height: 80vh;
     }
-    .header__socials::after{
+    .header__socials{
         display: none;
     }
 }
 
-@media screen and (max-width: 800px){
-    header{
-        height: 100vh;
-    }
-    .header__socials,.scroll__down{
-        display: none;
-    }
-}
 
 /*========Media queries small============*/
 @media screen and (max-width: 600px){
     header{
-        height: 100vh;
+        height: 80vh;
     }
-    .header__socials,.scroll__down{
+    .header__socials{
         display: none;
     }
 }
