--- a/src/components/nav/navbar.css
+++ b/src/components/nav/navbar.css
@@ -1,9 +1,11 @@
 nav{
-    background: #5a5a5a;
+    background: #2c2c2c transparent;
     width: max-content;
     display: block;
     padding: 0.7rem;
     z-index: 2;
+    /* box-shadow: 1.2px 0.2px 1.2px 0.4px #242424; */
+    box-shadow: 0px 0px 2px 1px #c2c2c2;
     position: fixed;
     left: 50%;
     transform: translate(-50%);
@@ -11,7 +13,29 @@ nav{
     display: flex;
     border-radius: 3rem;
     gap: 0.8rem;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(10px);
+    transition: 300ms;
+
+}
+nav:hover{
+    background: #2c2c2c transparent;
+    width: max-content;
+    display: block;
+    padding: 0.7rem;
+    z-index: 2;
+    /* box-shadow: 1.2px 0.2px 1.2px 0.4px #242424; */
+    box-shadow: 0px 0px 2px 1px #c2c2c2;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%) scale(103%);
+    bottom: 2rem;
+    display: flex;
+    border-radius: 3rem;
+    gap: 0.8rem;
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 0px 1px 1px rgb(175, 175, 175);
+    transition: 200ms;
+
 }
 nav a {
     background: transparent;
@@ -20,8 +44,20 @@ nav a {
     display: flex;
     color: var(--color-light);
     font-size: 1.1rem;
+    /* box-shadow: 4.2px 1.2px 0.2px 0.4px #242424; */
+    transition: 300ms;
+    margin-left: 5px;
+   
 }
 
 nav a:hover{
-    background: #414141;
+    background: var(--color-dark);
+    box-shadow: 0px 0px 1px 1px rgb(175, 175, 175);
+    transform: scale(109%);
+    transition: 200ms;
 }
+/* 
+nav a.active{
+    background: red;
+color: black;
+} */
