--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -103,26 +103,30 @@
 /*========Media queries small============*/
 @media screen and (max-width: 600px) {
     .about__me {
-        width: 65%;
-        margin: 0 AUTO 3rem;
+        width: 85%;
+       margin: 4rem 0rem 4rem -0.4rem;
     }
 
     .about__cards {
-        grid-template-columns: 1fr 1fr;
-        /* gap: 0.6rem; */
-        /* column-gap: 1rem; */
+        /* grid-template-columns: 1fr 1fr;
+        gap: 0.6rem;
+        column-gap: 1rem;
         margin-bottom: 0.5rem;
         margin-left: 1.6rem;
-        /* justify-content: center; */
-        transform: translate(6%);
+        justify-content: center;
+        transform: translate(6%); */
+        display: flex;
+        flex-direction: column;
+        width: 18rem;
+        
     }
 
     /* .about__card{
     margin-left: 2rem;
 } */
-    .about__content {
-        text-align: center;
-    }
+  .about__content{
+    margin-left: 2rem;
+  }
 
     .about__content p {
         margin: 1.5rem 0rem;
