--- a/src/components/nav/navbar.css
+++ b/src/components/nav/navbar.css
@@ -13,7 +13,7 @@ nav{
     display: flex;
     border-radius: 3rem;
     gap: 0.8rem;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(15px);
     transition: 300ms;
 
 }
@@ -32,7 +32,7 @@ nav:hover{
     display: flex;
     border-radius: 3rem;
     gap: 0.8rem;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(15px);
     box-shadow: 0px 0px 1px 1px rgb(175, 175, 175);
     transition: 200ms;
 
@@ -61,3 +61,12 @@ nav a.active{
     background: red;
 color: black;
 } */
+/*========Media queries small============*/
+@media screen and (max-width: 600px) {
+    nav{
+        transform: translate(-55%) scale(90%);
+    }
+    nav:hover{
+        transform: translate(-55%) scale(90%);
+    }
+}
