--- a/src/components/servicesC/services.css
+++ b/src/components/servicesC/services.css
@@ -7,7 +7,7 @@
 .service{
     background: var(--color-dark);
     border: 1px  transparent;
-    border-radius: 0.4rem;
+    border-radius: 0.4rem 0.4rem 2rem 2rem;
     /* padding: 2rem;
     text-align: left;
     width: auto; */
