--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 :root {
-  --color-bg: #333333;
+  --color-bg: #2c2c2c;
   --color-bg-variant: #7a5d5d;
   --color-primary: #e4e4e4;
   --color-primary-variant: rgb(56, 36, 36);
@@ -94,13 +94,14 @@ a:hover {
   width: max-content;
   display: inline-block;
   color: var(--color-primary);
+  background: transparent;
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
   transition: 250ms;
   cursor: pointer;
   border: 1px solid var(--color-primary);
   transition: var(--transition);
-  font-weight: 800;
+  font-weight: 600;
 }
 
 .btn:hover {
@@ -108,7 +109,7 @@ a:hover {
   color: var(--color-primary-dark);
   border-color: transparent;
   font-weight: 600;
-  box-shadow: 0px 0px 3px 1px rgb(117, 117, 117);
+  box-shadow: 0px 0px 1px 1px rgb(117, 117, 117);
   transform: scale(104%);
   transition: 150ms;
 }
@@ -116,7 +117,7 @@ a:hover {
 .btn-primary {
   background-color: var(--color-primary);
   color: black;
-  font-weight: 850;
+  font-weight: 600;
   transition: 250ms;
 }
 
@@ -124,11 +125,10 @@ a:hover {
   background: var(--color-white);
   color: rgb(0, 0, 0);
   border-color: transparent;
-  font-weight: 700;
+  font-weight: 600;
   transform: scale(104%);
   transition: 150ms;
-
-  box-shadow: 0px 0px 3px 1px rgb(175, 175, 175);
+  box-shadow: 0px 0px 1px 1px rgb(175, 175, 175);
 }
 
 img {
